--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html, body {
 
 /* -Text Styling */
 h1,h2,h3,h4,h5,h6 {
-	font-family: 'Montserrat', sans-serif;
+	font-family: "BBH Sans Bartle", sans-serif;
     font-weight: 500;
 }
 
@@ -30,7 +30,7 @@ h4 {
 }
 
 p {
-    font-family: 'Varela Round', sans-serif;
+    font-family: "BBH Sans Bartle", sans-serif;
     font-size: 1rem; /* 16px */
     padding: 0.3125rem 0.3125rem 0.3125rem 0;
     font-weight: 400;
@@ -47,7 +47,7 @@ a:hover {
 }
 
 li {
-    font-family: 'Varela Round', sans-serif;
+    font-family: "BBH Sans Bartle", sans-serif;
 }
 
 .strong {
