--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h4 {
 }
 
 p {
-    font-family: "BBH Sans Bartle", sans-serif;
+    font-family: "Roboto Condensed", sans-serif;
     font-size: 1rem; /* 16px */
     padding: 0.3125rem 0.3125rem 0.3125rem 0;
     font-weight: 400;
@@ -47,7 +47,7 @@ a:hover {
 }
 
 li {
-    font-family: "BBH Sans Bartle", sans-serif;
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 .strong {
